--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -7,8 +7,7 @@
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/youtube_player_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:autoPlay="false"
-        app:videoId="VIDEO_ID" />
+        android:layout_height="wrap_content"/>
+
 
 </RelativeLayout>
